# aepok_sentinel

./: .gitignore  LICENSE  README.md  TODO.md  __init__.py  generate_runtime_files.py  issue_offline_license.py  pyproject.toml  test_issue_offline_license.py
aepok_sentinel/: .gitignore
aepok_sentinel/core/: audit_chain.py  config.py  constants.py  key_manager.py  logging_setup.py  pqc_crypto.py  security_daemon.py
aepok_sentinel/tests/: test_azure_client.py  test_constants.py  test_controller.py  test_crypto.py  test_license.py  test_logging.py  test_malware_db.py  test_pqc_tls_verify.py  test_sentinelrc_schema.py
aepok_sentinel/utils/: malware_db.py  status_printer.py
core/: audit_chain.py  autoban.py  azure_client.py  config.py  constants.py  controller.py  directory_contract.py  identity.py  key_manager.py  key_manager_lock.py  license.py  logging_setup.py  pqc_crypto.py  pqc_tls.py  provision_device.py  security_daemon.py
deploy/: control_map.xlsx
runtime/config/: .sentinelrc  boot_attestation.json  identity.json  trust_anchor.json
runtime/keys/: vendor_dilithium_pub.pem
runtime/license/: license.key
tests/: test_audit_chain.py  test_autoban.py  test_azure_client.py  test_config.py  test_constants.py  test_controller.py  test_crypto.py  test_daemon.py  test_directory_contract.py  test_key_manager.py  test_license.py  test_logging.py  test_malware_db.py  test_pqc_tls.py  test_pqc_tls_verify.py  test_provision_device.py  test_sentinelrc_schema.py  test_status_printer.py
utils/: malware_db.py  pqc_tls_verify.py  sentinelrc_schema.py  status_printer.py
(+1 files in other folders)
